<resources>
    <string name="app_name">A11_RadioAndCheckbox</string>

    <string name="select_sex_tip">请选择性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="post">提交</string>

    <string name="select_fruit_tip">请选择喜欢的水果</string>
    <string name="apple">苹果</string>
    <string name="pear">梨</string>
    <string name="banana">香蕉</string>
    <string name="watermelon">西瓜</string>
</resources>
